[package]
edition = "2021"
name = "derive_modify_tests"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_modify = { version = "0.1.0", path = "../derive_modify" }
lazy_static = "1.4.0"
modify = { version = "0.1.0", path = "../modify" }
serde = "1.0.147"
serde_json = "1.0.87"
