[package]
authors = ["Vincent Prouillet <hello@vincentprouillet.com"]
description = "Macros 1.1 implementation of #[derive(Validate)]"
edition = "2018"
homepage = "https://github.com/Keats/validator"
keywords = ["api", "validation", "validator"]
license = "MIT"
name = "derive_validator"
readme = "../README.md"
repository = "https://github.com/Keats/validator"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
if_chain = "1"
lazy_static = "1"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
regex = "1.5.5"
syn = { version = "1", features = ["extra-traits"] }
validator_types = { version = "0.16", path = "../validator_types" }
