[package]
authors = [
  "Vincent Prouillet <hello@vincentprouillet.com",
  "biblius <crazycompanyxxl@gmail.com>",
]
description = "Derive macros for the Validate trait of `validify`"
edition = "2021"
homepage = "https://github.com/biblius/validify"
keywords = ["modify", "payload", "validate", "validify"]
license = "MIT"
name = "derive_validator"
readme = "../README.md"
repository = "https://github.com/biblius/validify"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
lazy_static = "1"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
regex = "1.5.5"
syn = { version = "2", features = ["extra-traits", "full"] }
validify_types = { path = "../validify_types", version = "0.1.0" }
