[package]
authors = ["biblius <crazycompanyxxl@gmail.com>"]
description = "Derive macros for the Validify trait of `validify`"
edition = "2021"
homepage = "https://github.com/biblius/validify"
keywords = ["modify", "payload", "validate", "validify"]
license = "MIT"
name = "derive_validify"
readme = "../README.md"
repository = "https://github.com/biblius/validify"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
lazy_static = "1"
proc-macro-error = "1"
proc-macro2 = "1.0.47"
quote = "1"
regex = "1.5.5"
syn = { version = "2.0.13", features = ["extra-traits", "full"] }
validify_types = { path = "../validify_types", version = "0.1.0" }
