[package]
edition = "2021"
name = "derive_validify_tests"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
chrono = { version = "0.4.23", features = ["serde"] }
lazy_static = "1.4.0"
serde = { version = "1.0.147", features = ["derive"] }
traits = { version = "0.1.0", path = "../traits" }
trybuild = "1.0.71"
validator = { version = "0.16.0", features = ["derive"] }
validify = { version = "0.1.0", path = "../validify" }
