[package]
edition = "2021"
name = "traits"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.47"
serde = "1.0.152"
syn = { version = "1.0.103", features = ["full"] }
validator = { path = "../validator", version = "0.1.0" }
