[package]
authors = [
  "Biblius <crazycompanyxxl@gmail.com>",
  "Vincent Prouillet <hello@vincentprouillet.com",
]
description = "Common validation functions (email, url, length, ...) and trait - to be used with `validator_derive`"
edition = "2018"
homepage = "https://github.com/Keats/validator"
keywords = ["api", "validation", "validator"]
license = "MIT"
name = "validator"
readme = "../README.md"
repository = "https://github.com/Keats/validator"
version = "0.1.0"

[dependencies]
card-validate = { version = "2.2" }
derive_validator = { version = "0.1.0", path = "../derive_validator" }
idna = "0.2"
indexmap = { version = "1", features = ["serde-1"] }
lazy_static = "1"
phonenumber = { version = "0.3" }
regex = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
unic-ucd-common = { version = "0.9" }
url = "2"
