[package]
authors = ["Vincent Prouillet <hello@vincentprouillet.com"]
description = "Basic type for validator and validator_derive"
edition = "2018"
homepage = "https://github.com/Keats/validator"
keywords = ["api", "validation", "validator"]
license = "MIT"
name = "validator_types"
readme = "../README.md"
repository = "https://github.com/Keats/validator"
version = "0.16.0"

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["extra-traits"] }
