[package]
authors = [
  "Vincent Prouillet <hello@vincentprouillet.com",
  "biblius <crazycompanyxxl@gmail.com>",
]
description = "Provides struct validation and modification functionality through the use of derive macros"
edition = "2021"
exclude = ["derive_tests/"]
homepage = "https://github.com/biblius/validify"
keywords = ["modify", "payload", "validate", "validify"]
license = "MIT"
name = "validify"
readme = "../README.md"
repository = "https://github.com/biblius/validify"
version = "1.0.11"


[dependencies]
card-validate = { version = "2.3" }
chrono = "0.4.24"
idna = "0.3"
indexmap = { version = "1", features = ["serde-1"] }
lazy_static = "1.4.0"
phonenumber = "0.3.2"
proc-macro2 = "1.0.56"
regex = "1.7.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1"
syn = { version = "2.0.26", features = ["full"] }
unic-ucd-common = { version = "0.9" }
url = "2.3.1"
validify_derive = { version = "1.0.11" }
