[package]
authors = [
  "Vincent Prouillet <hello@vincentprouillet.com",
  "biblius <crazycompanyxxl@gmail.com>",
]
description = "Provides struct validation and modification functionality through the use of derive macros"
edition = "2021"
exclude = ["derive_tests/"]
homepage = "https://github.com/biblius/validify"
keywords = ["modify", "payload", "validate", "validify"]
license = "MIT"
name = "validify"
readme = "../README.md"
repository = "https://github.com/biblius/validify"
version = "1.3.0"


[dependencies]
card-validate = { version = "2.3" }
chrono = "0.4.24"
idna = "0.5"
indexmap = { version = "2", features = ["serde"] }
lazy_static = "1.4.0"
phonenumber = "0.3.2"
regex = "1.7.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1"
unic-ucd-common = { version = "0.9" }
url = "2.3.1"
#validify_derive = { version = "1.3.0" }
validify_derive = { path = "../validify_derive" }
