[package]
authors = [
  "Vincent Prouillet <hello@vincentprouillet.com",
  "biblius <crazycompanyxxl@gmail.com>",
]
description = "Derive macros for the validify crate"
edition = "2021"
homepage = "https://github.com/biblius/validify"
keywords = ["modify", "payload", "validate", "validify"]
license = "MIT"
name = "validify_derive"
readme = "../README.md"
repository = "https://github.com/biblius/validify"
version = "1.0.0"

[lib]
proc-macro = true

[dependencies]
chrono = "0.4.24"
lazy_static = "1.4.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.56"
quote = "1.0.26"
regex = "1.5.5"
syn = { version = "2.0.15", features = ["extra-traits", "full"] }
