[package]
authors = [
  "Vincent Prouillet <hello@vincentprouillet.com",
  "biblius <crazycompanyxxl@gmail.com>",
]
description = "Derive macros for the Validate trait of `validify`"
edition = "2021"
homepage = "https://github.com/biblius/validify"
keywords = ["modify", "payload", "validate", "validify"]
license = "MIT"
name = "validify_types"
readme = "../README.md"
repository = "https://github.com/biblius/validify"
version = "0.1.0"

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["extra-traits"] }
